--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <button class="btn btn-dark m-3" onclick="kick()">Kick</button>
         </div>
     </div>
-    <div class="row">
+    <div id="restart" class="row">
       <div class="col-12 d-flex justify-content-center align-items-center">
         <button class="btn btn-dark m-3" onclick="playAgain()">Play Again</button>
       </div>
